radarr-conf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media-services
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: app.kubernetes.io/name: traefik
    spec:
      containers:
      - name: radarr
        image: linuxserver/radarr:latest
        ports:
        - containerPort: 7878
        volumeMounts:
        - name: config
          mountPath: /config
        - name: movies
          mountPath: /movies
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: radarr-config-pvc
      - name: movies
        persistentVolumeClaim:
          claimName: movies-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: radarr-service
  namespace: media-services
spec:
  type: ClusterIP  # Internal only
  selector:
    app: radarr
  ports:
  - port: 7878
    targetPort: 7878
